Personal links fixes

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <li><a href="https://medium.com/@dmi3coder"><span>read</span>Blog</a></li>
             <li><a href="https://github.com/dmi3coder"><span>fork</span>GitHub</a></li>
             <li><a href="https://twitter.com/dmi3coder"><span>mention</span>Twitter</a></li>
-            <li><a href="https://www.facebook.com/dmitriy.dmi3coder.chaban"><span>connect</span>Facebook</a></li>
-            <li><a href=""><span>link</span>Linkedin</a></li>
+            <li><a href="https://www.facebook.com/dmitry.android.chaban"><span>connect</span>Facebook</a></li>
+            <li><a href="https://www.linkedin.com"><span>link</span>Linkedin</a></li>
         </ul>
     </header>
 </body>
