new raw version of website, unfilled

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background: linear-gradient(
                     rgba(0, 0, 0, 0.7),
                     rgba(0, 0, 0, 0.7)
-            ), url('content/bg.jpg') no-repeat center center;
+            ), url('new/images/bg.jpg') no-repeat center center;
             background-size: cover;
         }
         header {
