Java skills raw

--- a/new/index.html
+++ b/new/index.html
@@ -59,8 +59,43 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Android</h2>
+										<table>
+											<tr>
+												<th>Skill</th>
+												<th>Level</th>
+											</tr>
+											<tr>
+												<th>Java</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span></th>
+											</tr>
+											<tr>
+												<th>Gradle/Groovy</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Kotlin</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Android SDK</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span></th>
+											</tr>
+											<tr>
+												<th>Spring</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Vaadin</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Android NDK</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+
+
+										</table>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
