--- a/new/index.html
+++ b/new/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Dmitriy Chaban</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -33,10 +33,9 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="#">Resume</a></li>
+								<li><a href="#">Portfolio</a></li>
+								<li><a href="#">About</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -90,11 +89,9 @@
 												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
-												<th>Android NDK</th>
+												<th>Android NDK <span class="icon fa-hashtag"></span> </th>
 												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
-
-
 										</table>
 										<a href="#" class="special">Learn more</a>
 									</div>
@@ -213,6 +210,8 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="//cdnjs.cloudflare.com/ajax/libs/velocity/1.4.0/velocity.min.js"></script>
+
 
 	</body>
 </html>
