--- a/new/index.html
+++ b/new/index.html
@@ -56,7 +56,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic01.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Android</h2>
 										<table>
@@ -92,8 +92,12 @@
 												<th>Android NDK <span class="icon fa-hashtag"></span> </th>
 												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
+											<tr>
+												<th>C/C++</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
 										</table>
-										<a href="#" class="special">Learn more</a>
+										<a href="#" class="special">More skills</a>
 									</div>
 								</div>
 							</section>
@@ -101,11 +105,44 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic02.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">iOS</h2>
+										<table>
+											<tr>
+												<th>Skill</th>
+												<th>Level</th>
+											</tr>
+											<tr>
+												<th>iOS</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Objective-C</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Swift</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>C/C++</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>MapKit</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Xcode & Interface Builder</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Core Data</th>
+												<th ><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+										</table>
+										<a href="#" class="special">More skills</a>
 									</div>
 								</div>
 							</section>
@@ -113,11 +150,40 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/java.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Other skills</h2>
+										<table>
+											<tr>
+												<th>Skill</th>
+												<th>Level</th>
+											</tr>
+											<tr>
+												<th>JavaScript</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>PHP</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>jQuery</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Angular</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Node.js</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Mongoose(C/C++)</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+										</table>
+										<a href="#" class="special">More skills</a>
 									</div>
 								</div>
 							</section>
@@ -125,37 +191,37 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Projects</h2>
+									<p>Here's a little part of projects that I've done/working on and not on the NDA</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
+											<h3 class="major">Fourplaces</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
+											<h3 class="major">Imagi</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
+											<h3 class="major">Scorsero</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
+											<h3 class="major">Streamanilla</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+									<!--<ul class="actions">-->
+										<!--<li><a href="#" class="button">Browse All</a></li>-->
+									<!--</ul>-->
 								</div>
 							</section>
 
