--- a/new/index.html
+++ b/new/index.html
@@ -150,7 +150,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/java.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/Java.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Other skills</h2>
 										<table>
