Contact information w/ email interaction

--- a/new/index.html
+++ b/new/index.html
@@ -189,41 +189,41 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Projects</h2>
-									<p>Here's a little part of projects that I've done/working on and not on the NDA</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Fourplaces</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Imagi</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Scorsero</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Streamanilla</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
+							<!--<section id="four" class="wrapper alt style1">-->
+								<!--<div class="inner">-->
+									<!--<h2 class="major">Projects</h2>-->
+									<!--<p>Here's a little part of projects that I've done/working on and not on the NDA</p>-->
+									<!--<section class="features">-->
+										<!--<article>-->
+											<!--<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>-->
+											<!--<h3 class="major">Fourplaces</h3>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>-->
+											<!--<a href="#" class="special">Learn more</a>-->
+										<!--</article>-->
+										<!--<article>-->
+											<!--<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>-->
+											<!--<h3 class="major">Imagi</h3>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>-->
+											<!--<a href="#" class="special">Learn more</a>-->
+										<!--</article>-->
+										<!--<article>-->
+											<!--<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>-->
+											<!--<h3 class="major">Scorsero</h3>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>-->
+											<!--<a href="#" class="special">Learn more</a>-->
+										<!--</article>-->
+										<!--<article>-->
+											<!--<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>-->
+											<!--<h3 class="major">Streamanilla</h3>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>-->
+											<!--<a href="#" class="special">Learn more</a>-->
+										<!--</article>-->
+									<!--</section>-->
 									<!--<ul class="actions">-->
 										<!--<li><a href="#" class="button">Browse All</a></li>-->
 									<!--</ul>-->
-								</div>
-							</section>
+								<!--</div>-->
+							<!--</section>-->
 
 					</section>
 
@@ -231,35 +231,35 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>I'm interested in any opportunities. Will it be some small startup or a huge company, I'm interested in experience!</p>
 							<form method="post" action="#">
 								<div class="field">
 									<label for="name">Name</label>
 									<input type="text" name="name" id="name" />
 								</div>
 								<div class="field">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" />
+									<label for="email">Subject</label>
+									<input type="text" name="subject" id="email" />
 								</div>
 								<div class="field">
 									<label for="message">Message</label>
 									<textarea name="message" id="message" rows="4"></textarea>
 								</div>
-								<ul class="actions">
+								<ul class="actions" onclick="
+								var name = document.getElementById('name').value;
+								var email = document.getElementById('email').value;
+								var message = document.getElementById('message').value;
+								window.open('mailto:dmi3coder@gmail.com?subject='+email+'&body='+message+'%0D%0A With regards, '+name+'.');
+								">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
 							<ul class="contact">
-								<li class="fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="fa-phone">(000) 000-0000</li>
-								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="fa-phone">(+380) 66 586 1886</li>
+								<li class="fa-envelope"><a href="mailto:dmi3coder@gmail.com">dmi3coder@gmail.com</a></li>
+								<li class="fa-linkedin"><a href="https://www.linkedin.com/in/dmi3coder">Dmitriy Chaban</a></li>
+								<li class="fa-facebook"><a href="https://www.facebook.com/dmitry.android.chaban">Dmitriy Chaban</a></li>
+								<li class="fa-instagram"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">_dmi3coder</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
