copyrighting section four commented

--- a/new/index.html
+++ b/new/index.html
@@ -188,7 +188,7 @@
 								</div>
 							</section>
 
-						<!-- Four -->
+						<!-- Four todo in a future -->
 							<!--<section id="four" class="wrapper alt style1">-->
 								<!--<div class="inner">-->
 									<!--<h2 class="major">Projects</h2>-->
@@ -262,7 +262,7 @@
 								<li class="fa-instagram"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">_dmi3coder</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Dmitriy Chaban. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
