Elements moved from new to core folder

--- a/index.html
+++ b/index.html
@@ -1,35 +1,283 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dmitriy Chaban</title>
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,300,700" type="text/css">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
-    <style type="text/css">
-        body {
-            background-color: #111 !important;
-            background: linear-gradient(
-                    rgba(0, 0, 0, 0.7),
-                    rgba(0, 0, 0, 0.7)
-            ), url('new/images/bg.jpg') no-repeat center center;
-            background-size: cover;
-        }
-        header {
-            background-color: transparent !important;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Dmitriy Chaban</h1>
-        <ul class="list-inline">
-            <li><a href="https://medium.com/@dmi3coder"><span>read</span>Blog</a></li>
-            <li><a href="https://github.com/dmi3coder"><span>fork</span>GitHub</a></li>
-            <li><a href="https://twitter.com/dmi3coder"><span>mention</span>Twitter</a></li>
-            <li><a href="https://www.facebook.com/dmitry.android.chaban"><span>connect</span>Facebook</a></li>
-            <li><a href="https://www.linkedin.com"><span>link</span>Linkedin</a></li>
-        </ul>
-    </header>
-</body>
+<!DOCTYPE HTML>
+<!--
+	Solid State by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Dmitriy Chaban - Mobile Software Developer</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body>
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Dmitriy Chaban</a></h1>
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<div class="inner">
+							<h2>Menu</h2>
+							<ul class="links">
+								<li><a href="index.html">Home</a></li>
+								<li><a href="#">Resume</a></li>
+								<li><a href="#">Portfolio</a></li>
+								<li><a href="#">About</a></li>
+							</ul>
+							<a href="#" class="close">Close</a>
+						</div>
+					</nav>
+
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<div class="logo"><span class="icon fa-android"></span><span class="icon fa-apple"></span><span class="icon fa-mobile"></span></div>
+							<h2>Dmitriy Chaban</h2>
+							<p>Mobile Software Engineer</p>
+						</div>
+					</section>
+
+				<!-- Wrapper -->
+					<section id="wrapper">
+
+						<!-- One -->
+							<section id="one" class="wrapper spotlight style1">
+								<div class="inner">
+									<a href="#" class="image"><img src="images/pic01.png" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Android</h2>
+										<table>
+											<tr>
+												<th>Skill</th>
+												<th>Level</th>
+											</tr>
+											<tr>
+												<th>Java</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span></th>
+											</tr>
+											<tr>
+												<th>Gradle/Groovy</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Kotlin</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Android SDK</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span></th>
+											</tr>
+											<tr>
+												<th>Spring</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Vaadin</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Android NDK <span class="icon fa-hashtag"></span> </th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>C/C++</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+										</table>
+										<a href="#" class="special">More skills</a>
+									</div>
+								</div>
+							</section>
+
+						<!-- Two -->
+							<section id="two" class="wrapper alt spotlight style2">
+								<div class="inner">
+									<a href="#" class="image"><img src="images/pic02.png" alt="" /></a>
+									<div class="content">
+										<h2 class="major">iOS</h2>
+										<table>
+											<tr>
+												<th>Skill</th>
+												<th>Level</th>
+											</tr>
+											<tr>
+												<th>iOS</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Objective-C</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Swift</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>C/C++</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>MapKit</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Xcode & Interface Builder</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Core Data</th>
+												<th ><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+										</table>
+										<a href="#" class="special">More skills</a>
+									</div>
+								</div>
+							</section>
+
+						<!-- Three -->
+							<section id="three" class="wrapper spotlight style3">
+								<div class="inner">
+									<a href="#" class="image"><img src="images/Java.png" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Other skills</h2>
+										<table>
+											<tr>
+												<th>Skill</th>
+												<th>Level</th>
+											</tr>
+											<tr>
+												<th>JavaScript</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>PHP</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>jQuery</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Angular</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Node.js</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>Mongoose(C/C++)</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+										</table>
+										<a href="#" class="special">More skills</a>
+									</div>
+								</div>
+							</section>
+
+						<!-- Four todo in a future -->
+							<!--<section id="four" class="wrapper alt style1">-->
+								<!--<div class="inner">-->
+									<!--<h2 class="major">Projects</h2>-->
+									<!--<p>Here's a little part of projects that I've done/working on and not on the NDA</p>-->
+									<!--<section class="features">-->
+										<!--<article>-->
+											<!--<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>-->
+											<!--<h3 class="major">Fourplaces</h3>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>-->
+											<!--<a href="#" class="special">Learn more</a>-->
+										<!--</article>-->
+										<!--<article>-->
+											<!--<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>-->
+											<!--<h3 class="major">Imagi</h3>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>-->
+											<!--<a href="#" class="special">Learn more</a>-->
+										<!--</article>-->
+										<!--<article>-->
+											<!--<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>-->
+											<!--<h3 class="major">Scorsero</h3>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>-->
+											<!--<a href="#" class="special">Learn more</a>-->
+										<!--</article>-->
+										<!--<article>-->
+											<!--<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>-->
+											<!--<h3 class="major">Streamanilla</h3>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>-->
+											<!--<a href="#" class="special">Learn more</a>-->
+										<!--</article>-->
+									<!--</section>-->
+									<!--<ul class="actions">-->
+										<!--<li><a href="#" class="button">Browse All</a></li>-->
+									<!--</ul>-->
+								<!--</div>-->
+							<!--</section>-->
+
+					</section>
+
+				<!-- Footer -->
+					<section id="footer">
+						<div class="inner">
+							<h2 class="major">Get in touch</h2>
+							<p>I'm interested in any opportunities. Will it be some small startup or a huge company, I'm interested in experience!</p>
+							<form method="post" action="#">
+								<div class="field">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" />
+								</div>
+								<div class="field">
+									<label for="email">Subject</label>
+									<input type="text" name="subject" id="email" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="4"></textarea>
+								</div>
+								<ul class="actions" onclick="
+								var name = document.getElementById('name').value;
+								var email = document.getElementById('email').value;
+								var message = document.getElementById('message').value;
+								window.open('mailto:dmi3coder@gmail.com?subject='+email+'&body='+message+'%0D%0A With regards, '+name+'.');
+								">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</form>
+							<ul class="contact">
+								<li class="fa-phone">(+380) 66 586 1886</li>
+								<li class="fa-envelope"><a href="mailto:dmi3coder@gmail.com">dmi3coder@gmail.com</a></li>
+								<li class="fa-linkedin"><a href="https://www.linkedin.com/in/dmi3coder">Dmitriy Chaban</a></li>
+								<li class="fa-facebook"><a href="https://www.facebook.com/dmitry.android.chaban">Dmitriy Chaban</a></li>
+								<li class="fa-instagram"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">_dmi3coder</a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Dmitriy Chaban. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+			<script src="//cdnjs.cloudflare.com/ajax/libs/velocity/1.4.0/velocity.min.js"></script>
+
+
+	</body>
 </html>
