--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 											</tr>
 											<tr>
 												<th>Gradle/Groovy</th>
-												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span></th>
 											</tr>
 											<tr>
 												<th>Kotlin</th>
-												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span></th>
 											</tr>
 											<tr>
 												<th>Android SDK</th>
@@ -85,11 +85,11 @@
 												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
-												<th>Vaadin</th>
+												<th>RxJava, RxAndroid</th>
 												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
-												<th>Android NDK <span class="icon fa-hashtag"></span> </th>
+												<th>Android NDK </th>
 												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
@@ -115,19 +115,23 @@
 											</tr>
 											<tr>
 												<th>iOS</th>
-												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
 												<th>Objective-C</th>
-												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
 												<th>Swift</th>
-												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
 												<th>C/C++</th>
 												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+											</tr>
+											<tr>
+												<th>RxSwift, RxCocoa</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
 												<th>MapKit</th>
@@ -135,11 +139,11 @@
 											</tr>
 											<tr>
 												<th>Xcode & Interface Builder</th>
-												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span></th>
 											</tr>
 											<tr>
 												<th>Core Data</th>
-												<th ><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 										</table>
 										<a href="#" class="special">More skills</a>
@@ -152,7 +156,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/Java.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Other skills</h2>
+										<h2 class="major">Cross platform</h2>
 										<table>
 											<tr>
 												<th>Skill</th>
@@ -163,16 +167,12 @@
 												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
-												<th>PHP</th>
-												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
-											</tr>
-											<tr>
-												<th>jQuery</th>
+												<th>React</th>
 												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
-												<th>Angular</th>
-												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+												<th>React Native</th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 											<tr>
 												<th>Node.js</th>
@@ -180,7 +180,7 @@
 											</tr>
 											<tr>
 												<th>Mongoose(C/C++)</th>
-												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span><span class="icon fa-circle-o"></span></th>
+												<th ><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle"></span><span class="icon fa-circle-o"></span></th>
 											</tr>
 										</table>
 										<a href="#" class="special">More skills</a>
@@ -276,7 +276,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-			<script src="//cdnjs.cloudflare.com/ajax/libs/velocity/1.4.0/velocity.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.4.0/velocity.min.js"></script>
 
 
 	</body>
